--- a/configs/snappi_client_defconfig
+++ b/configs/snappi_client_defconfig
@@ -32,6 +32,7 @@ BR2_PACKAGE_DROPBEAR=y
 # BR2_PACKAGE_DROPBEAR_CLIENT is not set
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 BR2_PACKAGE_DROPBEAR_LEGACY_CRYPTO=y
+BR2_PACKAGE_IW=y
 BR2_PACKAGE_IWD=y
 BR2_PACKAGE_KMOD=y
 BR2_PACKAGE_KMOD_TOOLS=y
