--- a/configs/snappi_client_defconfig
+++ b/configs/snappi_client_defconfig
@@ -26,7 +26,7 @@ BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI=y
 BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI_WIFI=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI4=y
-BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="board/raspberrypi4/config_4.txt"
+BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/raspberrypi/config.txt"
 BR2_PACKAGE_RPI_FIRMWARE_INSTALL_VCDBG=y
 BR2_PACKAGE_OPENSSL=y
 BR2_PACKAGE_DROPBEAR=y
