--- a/Config.in
+++ b/Config.in
@@ -1,2 +1,3 @@
+source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/package/alsaequal/Config.in"
 source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/package/snapcast/Config.in"
 
