Enable LADSPA package

--- a/configs/snappi_client_defconfig
+++ b/configs/snappi_client_defconfig
@@ -46,4 +46,5 @@ BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_KMOD_XZ=y
 BR2_PACKAGE_HOST_MTOOLS=y
 BR2_PACKAGE_ALSAEQUAL=y
+BR2_PACKAGE_LADSPA=y
 BR2_PACKAGE_SNAPCAST=y
