Use hint to make pcm show up in list

--- a/rootfs/etc/alsa/conf.d/equal.conf
+++ b/rootfs/etc/alsa/conf.d/equal.conf
@@ -13,5 +13,8 @@ pcm.plugequal {
         pcm "equal";
         rate 48000;
     }
+    hint {
+        description "Output through 10-band EQ to default soundcard"
+    }
 }
 
