Define location of alsaequal config file

--- a/rootfs/etc/alsa/conf.d/equal.conf
+++ b/rootfs/etc/alsa/conf.d/equal.conf
@@ -1,10 +1,12 @@
 pcm.equal {
     type equal;
     slave.pcm "plughw:0,0";
+    controls "/var/lib/alsa/equal.bin"
 }
 
 ctl.equal {
     type equal;
+    controls "/var/lib/alsa/equal.bin"
 }
 
 pcm.plugequal {
