--- a/configs/snappi_client_defconfig
+++ b/configs/snappi_client_defconfig
@@ -11,7 +11,7 @@ BR2_SYSTEM_DHCP="eth0"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/rootfs"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/raspberrypi/post-build.sh board/raspberrypi4/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/raspberrypi/post-image.sh board/raspberrypi4/post-image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="--add-audio --speedup-boot --raise-volume --mount-boot"
+BR2_ROOTFS_POST_SCRIPT_ARGS="--add-audio --speedup-boot --raise-volume --mount-boot --hostname-from-env --wifi-from-env"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,17f135b742c4edb340afb365873c3a574f7e16cb)/linux-17f135b742c4edb340afb365873c3a574f7e16cb.tar.gz"
