--- a/configs/snappi_client_rpi4_defconfig
+++ b/configs/snappi_client_rpi4_defconfig
@@ -9,8 +9,8 @@ BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 BR2_SYSTEM_DHCP="eth0"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/rootfs"
-BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/raspberrypi/post-build.sh board/raspberrypi4/post-build.sh"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/raspberrypi/post-image.sh board/raspberrypi4/post-image.sh"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/common/post-build.sh board/raspberrypi4/post-build.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/common/post-image.sh board/raspberrypi4/post-image.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="--add-audio --speedup-boot --raise-volume --mount-boot --hostname-from-env --wifi-from-env"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
@@ -26,7 +26,7 @@ BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI=y
 BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI_WIFI=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI4=y
-BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/raspberrypi/config.txt"
+BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/rpi4/config.txt"
 BR2_PACKAGE_RPI_FIRMWARE_INSTALL_VCDBG=y
 BR2_PACKAGE_OPENSSL=y
 BR2_PACKAGE_DROPBEAR=y
