--- a/snappi-server/external/configs/snappi_server_rpi4_defconfig
+++ b/snappi-server/external/configs/snappi_server_rpi4_defconfig
@@ -31,15 +31,28 @@ BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI4=y
 BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="$(BR2_EXTERNAL_SNAPPISERVER_PATH)/board/rpi4/config.txt"
 BR2_PACKAGE_RPI_FIRMWARE_INSTALL_VCDBG=y
+BR2_PACKAGE_GNUTLS=y
 BR2_PACKAGE_OPENSSL=y
+BR2_PACKAGE_EXPAT=y
+BR2_PACKAGE_LIBNDP=y
+BR2_PACKAGE_ELL=y
+BR2_PACKAGE_LIBGLIB2=y
+BR2_PACKAGE_READLINE=y
+BR2_PACKAGE_DNSMASQ=y
+# BR2_PACKAGE_DNSMASQ_TFTP is not set
 BR2_PACKAGE_DROPBEAR=y
 # BR2_PACKAGE_DROPBEAR_CLIENT is not set
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 BR2_PACKAGE_DROPBEAR_LEGACY_CRYPTO=y
-BR2_PACKAGE_NETWORK_MANAGER=y
-BR2_PACKAGE_NETWORK_MANAGER_CLI=y
+BR2_PACKAGE_IPTABLES=y
+BR2_PACKAGE_OPENRESOLV=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
+BR2_PACKAGE_WPA_SUPPLICANT_WEXT=y
+BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT=y
+BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
+BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
 BR2_PACKAGE_KMOD_TOOLS=y
+BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="120M"
