--- a/snappi-server/external/configs/snappi_server_rpi4_defconfig
+++ b/snappi-server/external/configs/snappi_server_rpi4_defconfig
@@ -33,7 +33,6 @@ BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="$(BR2_EXTERNAL_SNAPPISERVER_PATH)/board/rp
 BR2_PACKAGE_RPI_FIRMWARE_INSTALL_VCDBG=y
 BR2_PACKAGE_GNUTLS=y
 BR2_PACKAGE_OPENSSL=y
-BR2_PACKAGE_EXPAT=y
 BR2_PACKAGE_LIBNDP=y
 BR2_PACKAGE_ELL=y
 BR2_PACKAGE_LIBGLIB2=y
@@ -61,3 +60,6 @@ BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_KMOD_XZ=y
 BR2_PACKAGE_HOST_MTOOLS=y
+BR2_PACKAGE_SNAPCAST=y
+# BR2_PACKAGE_SNAPCAST_CLIENT is not set
+BR2_PACKAGE_SNAPCAST_SERVER=y
