--- a/snappi-server/external/Config.in
+++ b/snappi-server/external/Config.in
@@ -1,2 +1,3 @@
 source "$BR2_EXTERNAL_SNAPPISERVER_PATH/../../package/snapcast/Config.in"
+source "$BR2_EXTERNAL_SNAPPISERVER_PATH/../../package/jacktrip/Config.in"
 
