--- a/snappi-server/external/configs/snappi_server_rpi4_defconfig
+++ b/snappi-server/external/configs/snappi_server_rpi4_defconfig
@@ -63,3 +63,4 @@ BR2_PACKAGE_HOST_MTOOLS=y
 BR2_PACKAGE_SNAPCAST=y
 # BR2_PACKAGE_SNAPCAST_CLIENT is not set
 BR2_PACKAGE_SNAPCAST_SERVER=y
+BR2_PACKAGE_JACKTRIP=y
