--- a/package/jacktrip/Config.in
+++ b/package/jacktrip/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_JACKTRIP
 	bool "jacktrip"
+    select BR2_PACKAGE_QT5
     select BR2_PACKAGE_QT5BASE
 	help
       Provides JackTrip
