Create snappi user to run all software under

--- a/snappi-server/Config.in
+++ b/snappi-server/Config.in
@@ -1,4 +1,5 @@
 source "$BR2_EXTERNAL_SNAPPISERVER_PATH/../package/snapcast/Config.in"
 source "$BR2_EXTERNAL_SNAPPISERVER_PATH/../package/jacktrip/Config.in"
 source "$BR2_EXTERNAL_SNAPPISERVER_PATH/../package/rtaudio/Config.in"
+source "$BR2_EXTERNAL_SNAPPISERVER_PATH/../package/snappi-users/Config.in"
 
