--- a/snappi-server/configs/snappi_server_rpi4_defconfig
+++ b/snappi-server/configs/snappi_server_rpi4_defconfig
@@ -64,3 +64,4 @@ BR2_PACKAGE_SNAPCAST=y
 # BR2_PACKAGE_SNAPCAST_CLIENT is not set
 BR2_PACKAGE_SNAPCAST_SERVER=y
 BR2_PACKAGE_JACKTRIP=y
+BR2_PACKAGE_SNAPPI_USERS=y
