--- a/snappi-client/configs/snappi_client_rpi0w_defconfig
+++ b/snappi-client/configs/snappi_client_rpi0w_defconfig
@@ -8,6 +8,7 @@ BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 BR2_SYSTEM_DHCP="eth0"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/rootfs"
+BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt $(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/common/device_table.txt"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/common/post-build.sh board/raspberrypi0w/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/common/post-image.sh board/raspberrypi0w/post-image.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="--add-audio --speedup-boot --raise-volume --mount-boot --hostname-from-env --wifi-from-env"
