--- a/snappi-server/rootfs/etc/snapserver.conf
+++ b/snappi-server/rootfs/etc/snapserver.conf
@@ -18,3 +18,5 @@ source = alsa:///?name=Channel12&device=out12&sampleformat=48000:16:2&idle_thres
 source = alsa:///?name=Channel34&device=out34&sampleformat=48000:16:2&idle_threshold=2000
 source = alsa:///?name=Channel56&device=out56&sampleformat=48000:16:2&idle_threshold=2000
 source = alsa:///?name=Channel78&device=out78&sampleformat=48000:16:2&idle_threshold=2000
+
+codec = pcm
