Set lower end-to-end latency

--- a/snappi-server/rootfs/etc/snapserver.conf
+++ b/snappi-server/rootfs/etc/snapserver.conf
@@ -20,3 +20,4 @@ source = alsa:///?name=Channel56&device=out56&sampleformat=48000:16:2&idle_thres
 source = alsa:///?name=Channel78&device=out78&sampleformat=48000:16:2&idle_threshold=2000
 
 codec = pcm
+buffer = 500
