Use correct path for snapweb

--- a/snappi-server/rootfs/etc/snapserver.conf
+++ b/snappi-server/rootfs/etc/snapserver.conf
@@ -3,7 +3,7 @@ user = snappi
 group = audio
 
 [http]
-doc_root = /usr/share/snapweb
+doc_root = /usr/share/snapserver/snapweb
 
 [stream]
 source = alsa:///?name=Channel1&device=out1&sampleformat=48000:16:1&idle_threshold=2000
