Fix setup for direct connect to Jack from SnapCast

--- a/snappi-server/rootfs/etc/snapserver.conf
+++ b/snappi-server/rootfs/etc/snapserver.conf
@@ -9,15 +9,15 @@ doc_root = /usr/share/snapserver/snapweb
 codec = pcm
 buffer = 500
 
-source = alsa:///?name=Channel1&device=out1&sampleformat=48000:16:1&idle_threshold=2000
-source = alsa:///?name=Channel2&device=out2&sampleformat=48000:16:1&idle_threshold=2000
-source = alsa:///?name=Channel3&device=out3&sampleformat=48000:16:1&idle_threshold=2000
-source = alsa:///?name=Channel4&device=out4&sampleformat=48000:16:1&idle_threshold=2000
-source = alsa:///?name=Channel5&device=out5&sampleformat=48000:16:1&idle_threshold=2000
-source = alsa:///?name=Channel6&device=out6&sampleformat=48000:16:1&idle_threshold=2000
-source = alsa:///?name=Channel7&device=out7&sampleformat=48000:16:1&idle_threshold=2000
-source = alsa:///?name=Channel8&device=out8&sampleformat=48000:16:1&idle_threshold=2000
-source = alsa:///?name=Channel12&device=out12&sampleformat=48000:16:2&idle_threshold=2000
-source = alsa:///?name=Channel34&device=out34&sampleformat=48000:16:2&idle_threshold=2000
-source = alsa:///?name=Channel56&device=out56&sampleformat=48000:16:2&idle_threshold=2000
-source = alsa:///?name=Channel78&device=out78&sampleformat=48000:16:2&idle_threshold=2000
+source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=0&name=Channel1
+source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=1&name=Channel2
+source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=2&name=Channel3
+source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=3&name=Channel4
+source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=4&name=Channel5
+source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=5&name=Channel6
+source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=6&name=Channel7
+source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=7&name=Channel8
+source = jack:///?sampleformat=48000:16:2&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=0&name=Channel12
+source = jack:///?sampleformat=48000:16:2&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=2&name=Channel34
+source = jack:///?sampleformat=48000:16:2&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=4&name=Channel56
+source = jack:///?sampleformat=48000:16:2&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=6&name=Channel78
