--- a/snappi-client/configs/snappi_client_rpi0w_defconfig
+++ b/snappi-client/configs/snappi_client_rpi0w_defconfig
@@ -2,6 +2,7 @@ BR2_arm=y
 BR2_arm1176jzf_s=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_CCACHE=y
+BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/patches"
 BR2_TARGET_GENERIC_HOSTNAME="snappi-client"
 BR2_TARGET_GENERIC_ISSUE="Welcome to SnapPi Client"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
