--- a/snappi-server/configs/snappi_server_rpi4_defconfig
+++ b/snappi-server/configs/snappi_server_rpi4_defconfig
@@ -3,6 +3,7 @@ BR2_cortex_a72=y
 BR2_ARM_FPU_NEON_VFPV4=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_CCACHE=y
+BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_SNAPPISERVER_PATH)/patches"
 BR2_TARGET_GENERIC_HOSTNAME="snappi-server"
 BR2_TARGET_GENERIC_ISSUE="Welcome to SnapPi Server"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
