Update default snapserver config

--- a/snappi-server/rootfs/etc/snapserver.conf
+++ b/snappi-server/rootfs/etc/snapserver.conf
@@ -9,15 +9,15 @@ doc_root = /usr/share/snapserver/snapweb
 codec = pcm
 buffer = 500
 
-source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=0&name=Channel1
-source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=1&name=Channel2
-source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=2&name=Channel3
-source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=3&name=Channel4
-source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=4&name=Channel5
-source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=5&name=Channel6
-source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=6&name=Channel7
-source = jack:///?sampleformat=48000:16:1&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=7&name=Channel8
-source = jack:///?sampleformat=48000:16:2&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=0&name=Channel12
-source = jack:///?sampleformat=48000:16:2&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=2&name=Channel34
-source = jack:///?sampleformat=48000:16:2&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=4&name=Channel56
-source = jack:///?sampleformat=48000:16:2&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=6&name=Channel78
+source = jack:///?sampleformat=48000:16:1&jackTime=true&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=0&name=Mono-1
+source = jack:///?sampleformat=48000:16:1&jackTime=true&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=1&name=Mono-2
+source = jack:///?sampleformat=48000:16:1&jackTime=true&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=2&name=Mono-3
+source = jack:///?sampleformat=48000:16:1&jackTime=true&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=3&name=Mono-4
+source = jack:///?sampleformat=48000:16:1&jackTime=true&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=4&name=Mono-5
+source = jack:///?sampleformat=48000:16:1&jackTime=true&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=5&name=Mono-6
+source = jack:///?sampleformat=48000:16:1&jackTime=true&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=6&name=Mono-7
+source = jack:///?sampleformat=48000:16:1&jackTime=true&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=7&name=Mono-8
+source = jack:///?sampleformat=48000:16:2&jackTime=true&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=0&name=Stereo-1
+source = jack:///?sampleformat=48000:16:2&jackTime=true&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=2&name=Stereo-2
+source = jack:///?sampleformat=48000:16:2&jackTime=true&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=4&name=Stereo-3
+source = jack:///?sampleformat=48000:16:2&jackTime=true&idle_threshold=2000&autoconnect=JackTrip:receive_&autoconnect_skip=6&name=Stereo-4
