--- a/snappi-server/configs/snappi_server_rpi4_defconfig
+++ b/snappi-server/configs/snappi_server_rpi4_defconfig
@@ -10,6 +10,7 @@ BR2_INIT_SYSTEMD=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 BR2_SYSTEM_DEFAULT_PATH="/bin:/sbin:/usr/bin:/usr/sbin"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_SNAPPISERVER_PATH)/rootfs"
+BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt $(BR2_EXTERNAL_SNAPPISERVER_PATH)/board/common/device_table.txt"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_SNAPPISERVER_PATH)/board/common/post-build.sh board/raspberrypi4/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_SNAPPISERVER_PATH)/board/common/post-image.sh board/raspberrypi4/post-image.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="--mount-boot --hostname-from-env"
