Switch snappi client to systemd and networkmanager/wpa_supplicant

--- a/snappi-client/configs/snappi_client_rpi0w_defconfig
+++ b/snappi-client/configs/snappi_client_rpi0w_defconfig
@@ -4,11 +4,12 @@ BR2_TOOLCHAIN_EXTERNAL=y
 BR2_CCACHE=y
 BR2_TARGET_GENERIC_HOSTNAME="snappi-client"
 BR2_TARGET_GENERIC_ISSUE="Welcome to SnapPi Client"
-BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
+BR2_INIT_SYSTEMD=y
+BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt $(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/common/device_table.txt"
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 BR2_SYSTEM_DHCP="eth0"
+BR2_SYSTEM_DEFAULT_PATH="/bin:/sbin:/usr/bin:/usr/sbin"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/rootfs"
-BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt $(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/common/device_table.txt"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/common/post-build.sh board/raspberrypi0w/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/common/post-image.sh board/raspberrypi0w/post-image.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="--add-audio --speedup-boot --raise-volume --mount-boot --hostname-from-env --wifi-from-env"
@@ -20,7 +21,6 @@ BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2708-rpi-zero-w"
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
-BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_XZ=y
 BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI=y
@@ -31,17 +31,21 @@ BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI=y
 BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/rpi0w/config.txt"
 BR2_PACKAGE_RPI_FIRMWARE_INSTALL_VCDBG=y
 BR2_PACKAGE_OPENSSL=y
+BR2_PACKAGE_ELL=y
 BR2_PACKAGE_DROPBEAR=y
 # BR2_PACKAGE_DROPBEAR_CLIENT is not set
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 BR2_PACKAGE_DROPBEAR_LEGACY_CRYPTO=y
-BR2_PACKAGE_IW=y
-BR2_PACKAGE_IWD=y
-BR2_PACKAGE_KMOD=y
-BR2_PACKAGE_KMOD_TOOLS=y
+BR2_PACKAGE_NETWORK_MANAGER=y
+BR2_PACKAGE_NETWORK_MANAGER_CLI=y
+BR2_PACKAGE_WPA_SUPPLICANT=y
+BR2_PACKAGE_WPA_SUPPLICANT_WEXT=y
+BR2_PACKAGE_WPA_SUPPLICANT_AUTOSCAN=y
+BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
+BR2_PACKAGE_WPA_SUPPLICANT_DBUS=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
-BR2_TARGET_ROOTFS_EXT2_SIZE="120M"
+BR2_TARGET_ROOTFS_EXT2_SIZE="150M"
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
@@ -51,4 +55,3 @@ BR2_PACKAGE_ALSAEQUAL=y
 BR2_PACKAGE_LADSPA=y
 BR2_PACKAGE_SNAPCAST=y
 BR2_PACKAGE_SNAPPI_USERS=y
-
