--- a/package/snapcast/snapserver.service
+++ b/package/snapcast/snapserver.service
@@ -12,6 +12,9 @@ ExecStart=/usr/bin/snapserver --logging.sink=system $SNAPSERVER_OPTS
 User=snappi
 Group=audio
 Restart=always
+LimitRTPRIO=infinity
+LimitMEMLOCK=infinity
+LimitRTTIME=infinity
 
 [Install]
 WantedBy=multi-user.target
