Add python3 and python-smbus for INA219

--- a/snappi-client/configs/snappi_client_rpi0w_defconfig
+++ b/snappi-client/configs/snappi_client_rpi0w_defconfig
@@ -30,7 +30,8 @@ BR2_PACKAGE_RPI_FIRMWARE_BOOTCODE_BIN=y
 BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI=y
 BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/rpi0w/config.txt"
 BR2_PACKAGE_RPI_FIRMWARE_INSTALL_VCDBG=y
-BR2_PACKAGE_OPENSSL=y
+BR2_PACKAGE_PYTHON3=y
+BR2_PACKAGE_PYTHON_SMBUS_CFFI=y
 BR2_PACKAGE_DROPBEAR=y
 # BR2_PACKAGE_DROPBEAR_CLIENT is not set
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
@@ -51,4 +52,3 @@ BR2_PACKAGE_ALSAEQUAL=y
 BR2_PACKAGE_LADSPA=y
 BR2_PACKAGE_SNAPCAST=y
 BR2_PACKAGE_SNAPPI_USERS=y
-
