Support cloud-init files written by RPi Imager

--- a/snappi-client/Config.in
+++ b/snappi-client/Config.in
@@ -2,3 +2,4 @@ source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/../package/alsaequal/Config.in"
 source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/../package/ladspa/Config.in"
 source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/../package/snapcast/Config.in"
 source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/../package/snappi-users/Config.in"
+source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/../package/snappi-cloud-init/Config.in"
