--- a/snappi-server/configs/snappi_server_rpi4_defconfig
+++ b/snappi-server/configs/snappi_server_rpi4_defconfig
@@ -65,3 +65,4 @@ BR2_PACKAGE_SNAPWEB=y
 BR2_PACKAGE_JACKTRIP=y
 BR2_PACKAGE_SNAPPI_USERS=y
 BR2_PACKAGE_SNAPPISERVER_CONFIG=y
+BR2_PACKAGE_SNAPPI_CLOUD_INIT=y
