--- a/snappi-client/configs/snappi_client_rpi4_defconfig
+++ b/snappi-client/configs/snappi_client_rpi4_defconfig
@@ -26,10 +26,12 @@ BR2_PACKAGE_XZ=y
 BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI=y
 BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI_WIFI=y
 BR2_PACKAGE_RPI_FIRMWARE=y
+BR2_PACKAGE_RPI_FIRMWARE_BOOTCODE_BIN=y
 BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI4=y
 BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/rpi4/config.txt"
 BR2_PACKAGE_RPI_FIRMWARE_INSTALL_VCDBG=y
-BR2_PACKAGE_OPENSSL=y
+BR2_PACKAGE_PYTHON3=y
+BR2_PACKAGE_PYTHON_SMBUS_CFFI=y
 BR2_PACKAGE_DROPBEAR=y
 # BR2_PACKAGE_DROPBEAR_CLIENT is not set
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
@@ -50,3 +52,4 @@ BR2_PACKAGE_ALSAEQUAL=y
 BR2_PACKAGE_LADSPA=y
 BR2_PACKAGE_SNAPCAST=y
 BR2_PACKAGE_SNAPPI_USERS=y
+BR2_PACKAGE_SNAPPI_CLOUD_INIT=y
