Make server config easier and actually keep snapserver config

--- a/package/jacktrip/jacktrip.service
+++ b/package/jacktrip/jacktrip.service
@@ -14,5 +14,6 @@ LimitRTPRIO=infinity
 LimitMEMLOCK=infinity
 LimitRTTIME=infinity
 EnvironmentFile=-/etc/default/jacktrip
-ExecStart=/usr/bin/jacktrip $JACKTRIP_OPTS
+EnvironmentFile=-/etc/snappi.conf
+ExecStart=/usr/bin/jacktrip $JACKTRIP_OPTS --receivechannels ${SNAPPI_CHANNELS}
 Restart=always
