--- a/snappi-server/rootfs/usr/lib/systemd/system/jackd.service
+++ b/snappi-server/rootfs/usr/lib/systemd/system/jackd.service
@@ -12,7 +12,8 @@ LimitRTPRIO=infinity
 LimitMEMLOCK=infinity
 LimitRTTIME=infinity
 EnvironmentFile=-/etc/default/jackd
-ExecStart=/usr/bin/jackd $JACKD_OPTS
+EnvironmentFile=-/etc/snappi.conf
+ExecStart=/usr/bin/jackd $JACKD_OPTS -r${SNAPPI_SAMPLERATE}
 Restart=always
 RestartSec=2s
 
