Start snapserver after server config has finished

--- a/package/snappiserver-config/snappiserver-config.service
+++ b/package/snappiserver-config/snappiserver-config.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Snappi Server Config
-Before=network-pre.target
+Before=network-pre.target snapserver.service
 Wants=network-pre.target
 
 [Service]
