Snappi server config finshed

--- a/snappi-server/rootfs/usr/lib/systemd/system/jackd.service
+++ b/snappi-server/rootfs/usr/lib/systemd/system/jackd.service
@@ -12,8 +12,7 @@ LimitRTPRIO=infinity
 LimitMEMLOCK=infinity
 LimitRTTIME=infinity
 EnvironmentFile=-/etc/default/jackd
-EnvironmentFile=-/etc/snappi.conf
-ExecStart=/usr/bin/jackd $JACKD_OPTS -r${SNAPPI_SAMPLERATE}
+ExecStart=/usr/bin/jackd $JACKD_OPTS
 Restart=always
 RestartSec=2s
 
