--- a/package/jacktrip/jacktrip.service
+++ b/package/jacktrip/jacktrip.service
@@ -14,6 +14,5 @@ LimitRTPRIO=infinity
 LimitMEMLOCK=infinity
 LimitRTTIME=infinity
 EnvironmentFile=-/etc/default/jacktrip
-EnvironmentFile=-/etc/snappi.conf
-ExecStart=/usr/bin/jacktrip $JACKTRIP_OPTS --receivechannels ${SNAPPI_CHANNELS}
+ExecStart=/usr/bin/jacktrip $JACKTRIP_OPTS
 Restart=always
