--- a/package/snappi-server-config/Config.in
+++ b/package/snappi-server-config/Config.in
@@ -2,6 +2,7 @@ config BR2_PACKAGE_SNAPPI_SERVER_CONFIG
 	bool "snappi-server-config"
     select BR2_PACKAGE_PYTHON_UVICORN
     select BR2_PACKAGE_PYTHON_FASTAPI
+    select BR2_PACKAGE_PYTHON_PYYAML
     select BR2_PACKAGE_PYTHON3_SSL
         help
 	  Web-Interface and tools to configure the Snappi Server
