--- a/package/snappi-server-config/snappi-server-config-startup.service
+++ b/package/snappi-server-config/snappi-server-config-startup.service
@@ -5,7 +5,7 @@ Wants=network-pre.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/python /usr/lib/python3.11/site-packages/snappiserverconfig.py
+ExecStart=/usr/bin/python /usr/lib/python3.11/site-packages/snappiserverconfig.pyc
 
 [Install]
 WantedBy=network.target
