--- a/snappi-server/rootfs/etc/snappi.json
+++ b/snappi-server/rootfs/etc/snappi.json
@@ -88,5 +88,13 @@
         8
       ]
     }
-  ]
+  ],
+  "uac2": {
+      "enable": false,
+      "name": "SnappiAudio",
+      "serial": "1",
+      "channels": 2,
+      "samplerate": 44100,
+      "bits": 16
+  }
 }
