--- a/package/snappi-server-config/uac2.service
+++ b/package/snappi-server-config/uac2.service
@@ -1,7 +1,6 @@
 [Unit]
 Description=Snappi UAC2 Service
-Before=snapserver.service
-After=snappi-server-config-startup.service
+Before=snapserver.service snappi-server-config-startup.service
 
 [Service]
 Type=oneshot
