--- a/snappi-client/configs/snappi_client_rpi4_defconfig
+++ b/snappi-client/configs/snappi_client_rpi4_defconfig
@@ -40,6 +40,7 @@ BR2_PACKAGE_IW=y
 BR2_PACKAGE_IWD=y
 BR2_PACKAGE_KMOD=y
 BR2_PACKAGE_KMOD_TOOLS=y
+BR2_PACKAGE_NANO=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="120M"
