Remove last remnants of jackd

--- a/package/jacktrip/jacktrip.service
+++ b/package/jacktrip/jacktrip.service
@@ -14,5 +14,6 @@ LimitRTPRIO=infinity
 LimitMEMLOCK=infinity
 LimitRTTIME=infinity
 EnvironmentFile=-/etc/default/jacktrip
-ExecStart=pw-jack /usr/bin/jacktrip $JACKTRIP_OPTS
+EnvironmentFile=/etc/default/jackd
+ExecStart=pw-jack -s $JACK_SAMPLERATE -p $JACK_PERIODSIZE /usr/bin/jacktrip $JACKTRIP_OPTS
 Restart=always
