--- a/snappi-server/rootfs/etc/snappi.json
+++ b/snappi-server/rootfs/etc/snappi.json
@@ -14,87 +14,119 @@
   "streams": [
     {
       "name": "Mono-1",
-      "channels": [
-        1
+      "ports": [
+        [
+          "JackTrip:::receive_1"
+        ]
       ]
     },
     {
       "name": "Mono-2",
-      "channels": [
-        2
+      "ports": [
+        [
+          "JackTrip:::receive_2"
+        ]
       ]
     },
     {
       "name": "Mono-3",
-      "channels": [
-        3
+      "ports": [
+        [
+          "JackTrip:::receive_3"
+        ]
       ]
     },
     {
       "name": "Mono-4",
-      "channels": [
-        4
+      "ports": [
+        [
+          "JackTrip:::receive_4"
+        ]
       ]
     },
     {
       "name": "Mono-5",
-      "channels": [
-        5
+      "ports": [
+        [
+          "JackTrip:::receive_5"
+        ]
       ]
     },
     {
       "name": "Mono-6",
-      "channels": [
-        6
+      "ports": [
+        [
+          "JackTrip:::receive_6"
+        ]
       ]
     },
     {
       "name": "Mono-7",
-      "channels": [
-        7
+      "ports": [
+        [
+          "JackTrip:::receive_7"
+        ]
       ]
     },
     {
       "name": "Mono-8",
-      "channels": [
-        8
+      "ports": [
+        [
+          "JackTrip:::receive_8"
+        ]
       ]
     },
     {
       "name": "Stereo-1",
-      "channels": [
-        1,
-        2
+      "ports": [
+        [
+          "JackTrip:::receive_1"
+        ],
+        [
+          "JackTrip:::receive_2"
+        ]
       ]
     },
     {
       "name": "Stereo-2",
-      "channels": [
-        3,
-        4
+      "ports": [
+        [
+          "JackTrip:::receive_3"
+        ],
+        [
+          "JackTrip:::receive_4"
+        ]
       ]
     },
     {
       "name": "Stereo-3",
-      "channels": [
-        5,
-        6
+      "ports": [
+        [
+          "JackTrip:::receive_5"
+        ],
+        [
+          "JackTrip:::receive_6"
+        ]
       ]
     },
     {
       "name": "Stereo-4",
-      "channels": [
-        7,
-        8
+      "ports": [
+        [
+          "JackTrip:::receive_7"
+        ],
+        [
+          "JackTrip:::receive_8"
+        ]
       ]
     }
   ],
   "uac2": {
-      "enable": false,
-      "name": "SnappiAudio",
-      "serial": "1",
-      "channels": 2,
-      "samplerate": 44100,
-      "bits": 16
+    "enable": true,
+    "name": "SnappiAudio",
+    "serial": "1",
+    "channels": 2,
+    "samplerate": 44100,
+    "bits": 16
   }
 }
