--- a/package/snappi-server-config/frontend/package.json
+++ b/package/snappi-server-config/frontend/package.json
@@ -8,9 +8,11 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@joint/core": "^4.0.4",
     "@mdi/font": "7.4.47",
     "axios": "^1.7.2",
     "core-js": "^3.37.1",
+    "libavoid-js": "^0.4.0",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vuetify": "^3.6.11"
