--- a/snappi-server/Config.in
+++ b/snappi-server/Config.in
@@ -5,3 +5,4 @@ source "$BR2_EXTERNAL_SNAPPISERVER_PATH/../package/rtaudio/Config.in"
 source "$BR2_EXTERNAL_SNAPPISERVER_PATH/../package/snappi-users/Config.in"
 source "$BR2_EXTERNAL_SNAPPISERVER_PATH/../package/snappi-cloud-init/Config.in"
 source "$BR2_EXTERNAL_SNAPPISERVER_PATH/../package/snappi-server-config/Config.in"
+source "$BR2_EXTERNAL_SNAPPISERVER_PATH/../package/snappi-server-config-ui/Config.in"
