--- a/package/snappi-server-config/snappi-server-config-startup.service
+++ b/package/snappi-server-config/snappi-server-config-startup.service
@@ -1,11 +1,11 @@
 [Unit]
 Description=Snappi Server Config
-Before=network-pre.target jackd.service jacktrip.service snapserver.service
+Before=network-pre.target jacktrip.service snapserver.service uac2.service
 Wants=network-pre.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/python -m snappiserverconfig
+ExecStart=/usr/bin/snappi_server_config update
 
 [Install]
 WantedBy=network.target
