--- a/package/snappi-server-config/snappi-server-config.service
+++ b/package/snappi-server-config/snappi-server-config.service
@@ -3,7 +3,7 @@ Description=Snappi Server Config Service
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/uvicorn --host 0.0.0.0 --port 80 snappiserverconfig:app
+ExecStart=/usr/bin/snappi_server_config serve --host 0.0.0.0 --port 80
 Restart=always
 
 [Install]
