--- a/snappi-server/rootfs/etc/snappi.json
+++ b/snappi-server/rootfs/etc/snappi.json
@@ -11,84 +11,7 @@
     "mode": "ap",
     "band": "auto"
   },
-  "streams": [
-    {
-      "name": "Mono-1",
-      "ports": [
-        "JackTrip:::receive_1"
-      ]
-    },
-    {
-      "name": "Mono-2",
-      "ports": [
-        "JackTrip:::receive_2"
-      ]
-    },
-    {
-      "name": "Mono-3",
-      "ports": [
-        "JackTrip:::receive_3"
-      ]
-    },
-    {
-      "name": "Mono-4",
-      "ports": [
-        "JackTrip:::receive_4"
-      ]
-    },
-    {
-      "name": "Mono-5",
-      "ports": [
-        "JackTrip:::receive_5"
-      ]
-    },
-    {
-      "name": "Mono-6",
-      "ports": [
-        "JackTrip:::receive_6"
-      ]
-    },
-    {
-      "name": "Mono-7",
-      "ports": [
-        "JackTrip:::receive_7"
-      ]
-    },
-    {
-      "name": "Mono-8",
-      "ports": [
-        "JackTrip:::receive_8"
-      ]
-    },
-    {
-      "name": "Stereo-1",
-      "ports": [
-        "JackTrip:::receive_1",
-        "JackTrip:::receive_2"
-      ]
-    },
-    {
-      "name": "Stereo-2",
-      "ports": [
-        "JackTrip:::receive_3",
-        "JackTrip:::receive_4"
-      ]
-    },
-    {
-      "name": "Stereo-3",
-      "ports": [
-        "JackTrip:::receive_5",
-        "JackTrip:::receive_6"
-      ]
-    },
-    {
-      "name": "Stereo-4",
-      "ports": [
-        "JackTrip:::receive_7",
-        "JackTrip:::receive_8"
-      ]
-    }
-  ],
+  "streams": [],
   "uac2": {
     "enable": true,
     "name": "SnappiAudio",
