Use custom pipewire and wireplumber versions instead of BR packages

--- a/snappi-server/configs/snappi_server_rpi4_defconfig
+++ b/snappi-server/configs/snappi_server_rpi4_defconfig
@@ -67,3 +67,4 @@ BR2_PACKAGE_JACKTRIP=y
 BR2_PACKAGE_SNAPPI_USERS=y
 BR2_PACKAGE_SNAPPI_SERVER_CONFIG=y
 BR2_PACKAGE_SNAPPI_SERVER_CONFIG_UI=y
+BR2_PACKAGE_OVERRIDE_FILE="$(BR2_EXTERNAL_SNAPPISERVER_PATH)/overrides.mk"
