--- a/package/snapcast/snapserver.service
+++ b/package/snapcast/snapserver.service
@@ -7,7 +7,7 @@ After=network-online.target time-sync.target avahi-daemon.service pipewire.servi
 PermissionsStartOnly=true
 EnvironmentFile=/etc/default/snapserver
 ExecStartPre=/usr/bin/install -o snappi -g audio -d /var/lib/snapserver
-ExecStart=pw-jack -s $JACK_SAMPLERATE -p $JACK_PERIODSIZE /usr/bin/snapserver --logging.sink=system $SNAPSERVER_OPTS
+ExecStart=pw-jack /usr/bin/snapserver --logging.sink=system $SNAPSERVER_OPTS
 User=snappi
 Group=audio
 Restart=always
