--- a/snappi-server/configs/snappi_server_rpi4_defconfig
+++ b/snappi-server/configs/snappi_server_rpi4_defconfig
@@ -36,6 +36,7 @@ BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="$(BR2_EXTERNAL_SNAPPISERVER_PATH)/board/rp
 BR2_PACKAGE_LUA=y
 BR2_PACKAGE_WIREPLUMBER=y
 BR2_PACKAGE_ELL=y
+BR2_PACKAGE_NCURSES_WCHAR=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
 BR2_PACKAGE_DROPBEAR=y
