--- a/snappi-server/rootfs/etc/snappi.json
+++ b/snappi-server/rootfs/etc/snappi.json
@@ -3,7 +3,7 @@
   "channels": 8,
   "samplerate": 48000,
   "bits": 16,
-  "periodsize": 512,
+  "periodsize": 1024,
   "latency": 600,
   "wifi": {
     "ssid": "Snappi",
@@ -15,6 +15,6 @@
   "uac2": {
     "enable": true,
     "name": "SnappiAudio",
-    "channels": 2,
+    "channels": 2
   }
 }
