--- a/snappi-client/Config.in
+++ b/snappi-client/Config.in
@@ -3,3 +3,4 @@ source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/../package/ladspa/Config.in"
 source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/../package/snapcast/Config.in"
 source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/../package/snappi-users/Config.in"
 source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/../package/snappi-cloud-init/Config.in"
+source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/../package/python-osc/Config.in"
