--- a/snappi-client/Config.in
+++ b/snappi-client/Config.in
@@ -4,3 +4,4 @@ source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/../package/snapcast/Config.in"
 source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/../package/snappi-users/Config.in"
 source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/../package/snappi-cloud-init/Config.in"
 source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/../package/python-osc/Config.in"
+source "$BR2_EXTERNAL_SNAPPICLIENT_PATH/../package/snappir-sensor/Config.in"
