Update defconfigs for 0w and zero2w

--- a/snappi-client/configs/snappi_client_rpizero2w_defconfig
+++ b/snappi-client/configs/snappi_client_rpizero2w_defconfig
@@ -29,7 +29,7 @@ BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_BOOTCODE_BIN=y
 BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI=y
 BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="$(BR2_EXTERNAL_SNAPPICLIENT_PATH)/board/rpizero2w/config.txt"
-BR2_PACKAGE_PYTHON3=y
+BR2_PACKAGE_PYTHON_GPIOZERO=y
 BR2_PACKAGE_PYTHON_SMBUS_CFFI=y
 BR2_PACKAGE_DROPBEAR=y
 # BR2_PACKAGE_DROPBEAR_CLIENT is not set
@@ -37,6 +37,7 @@ BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 BR2_PACKAGE_DROPBEAR_LEGACY_CRYPTO=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_IWD=y
+BR2_PACKAGE_RSYNC=y
 BR2_PACKAGE_KMOD=y
 BR2_PACKAGE_KMOD_TOOLS=y
 BR2_PACKAGE_NANO=y
@@ -53,4 +54,5 @@ BR2_PACKAGE_LADSPA=y
 BR2_PACKAGE_SNAPCAST=y
 BR2_PACKAGE_SNAPPI_USERS=y
 BR2_PACKAGE_SNAPPI_CLOUD_INIT=y
-
+BR2_PACKAGE_PYTHON_OSC=y
+BR2_PACKAGE_SNAPPIR_SENSOR=y
