--- a/snappi-server/configs/snappi_server_rpi4_defconfig
+++ b/snappi-server/configs/snappi_server_rpi4_defconfig
@@ -7,6 +7,7 @@ BR2_PACKAGE_OVERRIDE_FILE="$(BR2_EXTERNAL_SNAPPISERVER_PATH)/overrides.mk"
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_SNAPPISERVER_PATH)/patches"
 BR2_TARGET_GENERIC_HOSTNAME="snappi-server"
 BR2_TARGET_GENERIC_ISSUE="Welcome to SnapPi Server"
+BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_6_6=y
 BR2_INIT_SYSTEMD=y
 BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt $(BR2_EXTERNAL_SNAPPISERVER_PATH)/board/common/device_table.txt"
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
@@ -17,16 +18,17 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_SNAPPISERVER_PATH)/board/common/pos
 BR2_ROOTFS_POST_SCRIPT_ARGS="--mount-boot --hostname-from-env"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
-BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,17f135b742c4edb340afb365873c3a574f7e16cb)/linux-17f135b742c4edb340afb365873c3a574f7e16cb.tar.gz"
+BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,576cc10e1ed50a9eacffc7a05c796051d7343ea4)/linux-576cc10e1ed50a9eacffc7a05c796051d7343ea4.tar.gz"
 BR2_LINUX_KERNEL_DEFCONFIG="bcm2711"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_SNAPPISERVER_PATH)/board/rpi4/linux.config.fragment"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2711-rpi-4-b"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="broadcom/bcm2711-rpi-4-b broadcom/bcm2711-rpi-400 broadcom/bcm2711-rpi-cm4 broadcom/bcm2711-rpi-cm4s"
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
 BR2_PACKAGE_JACK2=y
 BR2_PACKAGE_PIPEWIRE=y
+BR2_PACKAGE_WIREPLUMBER=y
 BR2_PACKAGE_XZ=y
 BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI=y
 BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI_WIFI=y
@@ -37,9 +39,10 @@ BR2_PACKAGE_LINUX_FIRMWARE_MEDIATEK_MT76X2E=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI4=y
 BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="$(BR2_EXTERNAL_SNAPPISERVER_PATH)/board/rpi4/config.txt"
+BR2_PACKAGE_KMOD=y
+BR2_PACKAGE_KMOD_TOOLS=y
 BR2_PACKAGE_RTL8821CU=y
 BR2_PACKAGE_LUA=y
-BR2_PACKAGE_WIREPLUMBER=y
 BR2_PACKAGE_ELL=y
 BR2_PACKAGE_NCURSES_WCHAR=y
 BR2_PACKAGE_DNSMASQ=y
